--- a/src/scss/brands.scss
+++ b/src/scss/brands.scss
@@ -104,46 +104,46 @@
     }
   }
   &__link--brand-1 {
-    background: url(../img/lenovo.png) no-repeat 10% 50%;
+    background: url(img/lenovo.png) no-repeat 10% 50%;
   }
   &__link--brand-2 {
-    background: url(../img/acer.png) no-repeat 10% 50%;
+    background: url(img/acer.png) no-repeat 10% 50%;
   }
   &__link--brand-3 {
-    background: url(../img/apple.png) no-repeat 10% 50%;
+    background: url(img/apple.png) no-repeat 10% 50%;
   }
   &__link--brand-4 {
-    background: url(../img/hp.png) no-repeat 10% 50%;
+    background: url(img/hp.png) no-repeat 10% 50%;
   }
   &__link--brand-5 {
-    background: url(../img/sony.png) no-repeat 10% 50%;
+    background: url(img/sony.png) no-repeat 10% 50%;
   }
   &__link--brand-6 {
-    background: url(../img/veiwsonic.png) no-repeat 10% 50%;
+    background: url(img/veiwsonic.png) no-repeat 10% 50%;
   }
   &__link--brand-7 {
-    background: url(../img/samsung.png) no-repeat 10% 50%;
+    background: url(img/samsung.png) no-repeat 10% 50%;
   }
 
   &__link--brand-8 {
-    background: url(../img/hp.png) no-repeat 10% 50%;
+    background: url(img/hp.png) no-repeat 10% 50%;
   }
 
   &__link--brand-9 {
-    background: no-repeat url(../img/sony.png) 10% 50%;
+    background: no-repeat url(img/sony.png) 10% 50%;
   }
 
   &__link--brand-10 {
-    background: url(../img/lenovo.png) no-repeat 10% 50%;
+    background: url(img/lenovo.png) no-repeat 10% 50%;
   }
 
   &__link--brand-11 {
-    background: url(../img/apple.png) no-repeat 10% 50%;
+    background: url(img/apple.png) no-repeat 10% 50%;
   }
   &__link::after {
     display: block;
     content: '';
-    background: url(../img/go.svg) no-repeat right;
+    background: url(img/go.svg) no-repeat right;
     width: 40px;
     height: 40px;
     position: absolute;
