--- a/src/scss/gadgets.scss
+++ b/src/scss/gadgets.scss
@@ -102,7 +102,7 @@
   &__link::after {
     display: block;
     content: '';
-    background: url(../img/go.svg) no-repeat right;
+    background: url(img/go.svg) no-repeat right;
     width: 40px;
     height: 40px;
     position: absolute;
@@ -158,7 +158,7 @@
       display: inline-block;
       width: 7.41px;
       height: 10.29px;
-      background: url(../img/arrow.svg) no-repeat center;
+      background: url(img/arrow.svg) no-repeat center;
       margin-right: 17.29px;
     }
   }
@@ -201,7 +201,7 @@
       display: inline-block;
       width: 7.41px;
       height: 10.29px;
-      background: url(../img/arrowUp.svg) no-repeat center;
+      background: url(img/arrowUp.svg) no-repeat center;
       margin-right: 15.29px;
     }
   }
