--- a/src/scss/price.scss
+++ b/src/scss/price.scss
@@ -162,7 +162,7 @@ ul {
       bottom: 25px;
       content: '';
       display: block;
-      background: url(../img/more.svg);
+      background: url(img/more.svg);
       width: 24px;
       height: 25px;
     }
