--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,8 +20,8 @@
 @font-face {
   font-family: 'TT Lakes';
   src: local('TT Lakes Regular'), local('TTLakes-Regular'),
-    url('/src/fonts/TTLakes-Regular.ttf') format('truetype'),
-    url('/src/fonts/TTLakes-Regular.wof') format('woff');
+    url('fonts/TTLakes-Regular.ttf') format('truetype'),
+    url('fonts/TTLakes-Regular.wof') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -29,8 +29,8 @@
 @font-face {
   font-family: 'TT Lakes';
   src: local('TT Lakes Bold'), local('TTLakes-Bold'),
-    url('/src/fonts/TTLakes-Bold.ttf') format('truetype'),
-    url('/src/fonts/TTLakes-Bold.woff') format('woff');
+    url('fonts/TTLakes-Bold.ttf') format('truetype'),
+    url('fonts/TTLakes-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
 }
