--- a/src/scss/wrapper-button.scss
+++ b/src/scss/wrapper-button.scss
@@ -31,7 +31,7 @@
       display: inline-block;
       width: 7.41px;
       height: 10.29px;
-      background: url(../img/arrow.svg) no-repeat center;
+      background: url(img/arrow.svg) no-repeat center;
       margin-right: 17.29px;
     }
   }
@@ -71,7 +71,7 @@
       display: inline-block;
       width: 7.41px;
       height: 10.29px;
-      background: url(../img/arrowUp.svg) no-repeat center;
+      background: url(img/arrowUp.svg) no-repeat center;
       margin-right: 15.29px;
     }
   }
