--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -89,7 +89,7 @@
   display: inline-block;
   width: 24px;
   height: 24px;
-  background: url('/src/img/row.svg') no-repeat center;
+  background: url('img/row.svg') no-repeat center;
   margin-right: 8px;
 }
 .about__image {
