--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -25,28 +25,28 @@
 }
 
 .main-button--burger-item {
-  background-image: url('/src/img/burger.svg');
+  background-image: url('img/burger.svg');
 }
 .main-button--repair-item {
-  background-image: url('/src/img/repair.svg');
+  background-image: url('img/repair.svg');
 }
 .main-button--check-status-item {
-  background-image: url('/src/img/checkstatus.svg');
+  background-image: url('img/checkstatus.svg');
 }
 .main-button--call-item {
-  background-image: url('/src/img/call.svg');
+  background-image: url('img/call.svg');
 }
 .main-button--chat-item {
-  background-image: url('/src/img/chat.svg');
+  background-image: url('img/chat.svg');
 }
 .main-button--profile-item {
-  background-image: url('/src/img/profile.svg');
+  background-image: url('img/profile.svg');
 }
 .main-button--exit-item {
-  background-image: url('../img/exit.svg');
+  background-image: url('img/exit.svg');
 }
 .main-button--search-item {
-  background-image: url('../img/search.svg');
+  background-image: url('img/search.svg');
   margin-left: 78px;
 }
 
@@ -64,6 +64,6 @@
   display: inline-block;
   width: 24px;
   height: 24px;
-  background: url('/src/img/row.svg') no-repeat center;
+  background: url('img/row.svg') no-repeat center;
   margin-right: 8px;
 }
