--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -14,7 +14,7 @@
   }
 
   &__button {
-    background: url(../img/buy.svg) no-repeat center;
+    background: url(img/buy.svg) no-repeat center;
     width: 119px;
     height: 32px;
     border: none;
