--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -47,6 +47,6 @@
   display: block;
   width: 96px;
   height: 50px;
-  background: url(/src/img/CPS.svg) no-repeat;
+  background: url(img/CPS.svg) no-repeat;
   background-size: contain;
 }
