--- a/src/scss/modal-call.scss
+++ b/src/scss/modal-call.scss
@@ -76,7 +76,7 @@
   &__submit-button {
     width: 136px;
     height: 32px;
-    background: url(../img/submit.svg) no-repeat center;
+    background: url(img/submit.svg) no-repeat center;
     border: unset;
     float: right;
   }
